fixing dropdown spacing

--- a/style.scss
+++ b/style.scss
@@ -299,8 +299,8 @@ a.share_button.share-twitter.left.mr15.js-twitter_link {
 }
 
 
-span.country_drop_wrap.js-country_drop_wrap.hide.clear {
-  margin-bottom: 20px;
+span.country_drop_wrap {
+  margin-bottom: 20px !important;
 }
 
 #mobile_opt_in {
